# MuvisCar

./: .gitignore  README.md  alembic.ini  app.py  create_tables.py  docker-compose.debug.yml  docker-compose.yml  docker_compose_redis.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 05348787639d_renomeia_coluna_cpf_para_cpf_cnpj.py  08d1731f8707_renomeia_coluna_cpf_para_cpf_cnpj.py  32f7c42e031c_renomeia_coluna_cpf_para_cpf_cnpj.py  334928ecd2e7_adicionar_tipo_de_combustivel_e_.py  62784c72bd55_adicionar_cnh_url_à_tabela_locacoes.py  6ec65aa638d0_altera_coluna_cpf_para_cpf_cnpj.py  a0a8e0ac49dc_adiciona_campo_password_hash_ao_cliente.py  bf6eaf5f1062_adiciona_cnh_photo_path_à_tabela_.py
src/config/: database.py
src/controllers/: car_controller.py  clientes.py  rental_controller.py
src/models/: __init__.py  car.py  clientes.py  inity.py  login.py  rental.py
src/routes/: __init__.py  car_routes.py  clientes_routes.py  login_router.py  registro_rapido_routes.py  rental_routes.py  reserva_rapida.py  social_auth.py
src/services/: __init__.py  car_service.py  cliente_service.py  login_service.py  rental_service.py  token_service.py
static/css/: carros.css  clientes.css  home.css  locacoes.css  login.css  relatorio.css
static/js/: carros.js  clientes.js  home.js  locacoes.js  login.js  main.js  registro_rapido.js  relatorio.js  reserva_rapida.js
templates/: carros.html  clientes.html  home.html  locacoes.html  login.html  registro_rapido.html  relatorio.html  reserva.html
